<resources>
    <string name="app_name">MyMap</string>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="title_activity_routing_settings">RoutingSettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="submit">Submit</string>
    <string name="retype_password">Retype password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register">Register</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="logout">Logout</string>
    <string name="placeholder">Placeholder</string>
    <string name="tflite_model_versions">TFLITE MODEL VERSIONS</string>
    <string name="settings">SETTINGS</string>
    <string name="download_latest_weights">Download Latest Weights</string>
    <string name="send_retraining_images">Send Retraining Images</string>
    <string name="enable_landmark_caching">Enable Landmark Caching</string>
</resources>