<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    style="">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/nlb_building"
        android:scaleType="fitXY">
    </ImageView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/dark"
        android:scaleType="fitXY"
        android:alpha="0.8">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">
            <TextView
                android:id="@+id/header_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|bottom"
                android:text="@string/login"
                android:letterSpacing="0.01"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="50sp">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <EditText
                android:id="@+id/username_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <EditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/retype_password_linearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:visibility="gone">
            <EditText
                android:id="@+id/retype_password_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:hint="@string/retype_password"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12">
            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:background="@color/tfe_semi_transparent"
                android:text="@string/submit"
                android:layout_marginTop="30dp">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:id="@+id/register_textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:clickable="true"
                android:focusable="true"
                android:textSize="15sp"
                android:gravity="center">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>