<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AboutActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="vertical"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/tflite_model_versions">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/nlb_logo_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:text="@string/placeholder">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/red_green_man_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:text="@string/placeholder">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/bus_stop_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:text="@string/placeholder">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/clearWeights_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Clear Weights">
            </Button>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17sp"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/settings">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Switch
                android:id="@+id/downloadWeights_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/download_latest_weights"
                android:layout_gravity="center"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Switch
                android:id="@+id/sendImages_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/send_retraining_images"
                android:layout_gravity="center"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Switch
                android:id="@+id/landmarkCache_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enable_landmark_caching"
                android:layout_gravity="center"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>
</LinearLayout>
