<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LabelActivity">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.1">
            <TextView
                android:id="@+id/title_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Loading"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:letterSpacing="0.01"
                android:gravity="center"
                android:textSize="40sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/label_linearLayout"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.1">
<!--            <LinearLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1">-->
<!--                <TextView-->
<!--                    android:id="@+id/textview1"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="80dp"-->
<!--                    app:layout_flexBasisPercent="50%"-->
<!--                    android:text="TEST1"-->
<!--                />-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1">-->
<!--                <TextView-->
<!--                    android:id="@+id/textview1"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="80dp"-->
<!--                    app:layout_flexBasisPercent="50%"-->
<!--                    android:text="TEST2"-->
<!--                    />-->
<!--            </LinearLayout>-->

        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.5">
            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/label_imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/loading">
            </pl.droidsonroids.gif.GifImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.25"
            android:paddingTop="20dp">
            <LinearLayout
                android:id="@+id/yes_linearLayout"
                android:paddingRight="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                tools:ignore="NestedWeights"
                android:orientation="horizontal"
                android:clickable="false"
                android:focusable="true">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/success"
                        android:scaleType="fitXY"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/yes"
                        android:textSize="40sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">
                    </TextView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/no_linearLayout"
                android:paddingStart="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:clickable="false"
                android:focusable="true">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/danger"
                        android:scaleType="fitXY"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/no"
                        android:textSize="40sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">
                    </TextView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.05">
            <TextView
                android:id="@+id/logout_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:textSize="15sp"
                android:text="@string/logout"
                android:clickable="true"
                android:focusable="true">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>